--- a/src/sass/blocks/_primaryConsult.scss
+++ b/src/sass/blocks/_primaryConsult.scss
@@ -6,11 +6,11 @@
     background-size: 1920px 500px;
     &__wrapper {
         width: 520px;
-        height: 448px;
+        min-height: 448px;
         border-radius: 20px;
         background: $colorBg_2;
         box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.05);
-        margin-left: 774px;
+        margin-left: auto;
         padding: 30px 55px 25px 55px;
         text-align: center;
     }
@@ -20,12 +20,15 @@
         line-height: 34px;
         color: $colorText_1;
     }
-    .signUpForm {
-        margin-top: 20px;
-        input {
-            &:nth-child(2) {
-                margin-top: 20px;
-            }
-        }
+    &__subtitle {
+        font-size: 24px;    
+        font-weight: 500;
+        color: $colorText_2;
+        line-height: 29px;
+        text-align: center;
+        margin-top: 14px;
+    }
+    &__form {
+        margin-top: 30px;
     }
 }
