--- a/src/sass/blocks/_aboutClinic.scss
+++ b/src/sass/blocks/_aboutClinic.scss
@@ -9,65 +9,83 @@
     &__wrapper {
         margin-top: 30px;
         display: grid;
-        grid-template-columns: 631px 630px;
-        column-gap: 29px;
+        grid-template-columns: 630px 630px;
+        column-gap: 30px;
     }
     &__descr {
         font-weight: 600;
         font-size: 22px;
-        line-height: 140%;
+        line-height: 31px;
     }
     &__list {
         margin-top: 40px;
         margin-bottom: 0;
         list-style-type: none;
         padding-inline-start: 80px;
-        &_item {
-            position: relative;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 22px;
-            color: #000000;
-            margin-bottom: 40px;
-            &:nth-child(3) {
-                margin-bottom: 30px;
-            }
-            &::before {
-                content: "";
-                position: absolute;
-                top: -10px;
-                left: -80px;
-                display: block;
-                width: 70px;
-                height: 70px;
-                background: url('../icons/aboutClinic/verify.png') no-repeat 50%/cover;
-            }
+    }
+    &__list-item {
+        position: relative;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 22px;
+        color: #000000;
+        margin-bottom: 40px;
+        &:nth-child(3) {
+            margin-bottom: 0px;
+        }
+        &::before {
+            content: "";
+            position: absolute;
+            top: -10px;
+            left: -80px;
+            display: block;
+            width: 70px;
+            height: 70px;
+            background: url('../icons/aboutClinic/verify.png') no-repeat 50%/cover;
         }
     }
     &__img {
         width: 630px;
         height: 400px;
-        img {
-            width: 630px;
-            height: 400px;
+    }
+    &__slider {
+        position: relative;
+        margin-top: 60px;
+    }
+    &__slide {
+        cursor: pointer;
+    }
+    &__slide-img {
+        width: 300px;
+        height: 200px;
+    }
+    &__control-prevBtn {
+        top: 77px;
+        left: -20px;
+    }
+    &__control-nextBtn {
+        top: 77px;
+        right: -20px;
+    }
+    &__slider-nav {
+        margin-top: 30px;
+    }
+    &__nav-dot {
+        width: 18px;
+        height: 18px;
+        background: $colorBg_1;
+        border-radius: 100%;
+        margin-right: 20px;
+        cursor: pointer;
+        &:last-child {
+            margin-right: 0px;
         }
     }
-    .slider {
-        &__slide {
-            img {
-                width: 300px;
-                height: 200px;
-            }
-        }
-        &__controls {
-            &_prevBtn {
-                top: 77px;
-                left: -20px;
-            }
-            &_nextBtn {
-                top: 77px;
-                right: -20px;
-            }
-        }
-    }
+    .tns-nav-active {
+        background: $colorText_3;
+        width: 24px;
+        height: 24px;
+        margin-right: 20px;
+        border-radius: 100%;
+    }  
 }
