--- a/src/sass/blocks/_doctors.scss
+++ b/src/sass/blocks/_doctors.scss
@@ -1,152 +1,93 @@
 .doctors {
     padding-top: 90px;
+    min-height: 1038px;
     &__subtitle {
         width: 1066px;
         text-align: center;
         margin: 30px auto 0 auto;
     }
-    .slider {
-        &__controls {
-            &_prevBtn {
-                top: 233px;
-                right: 620px;
-            }
-            &_nextBtn {
-                top: 233px;
-                right: -11px;
-            }
-        }
-        &__nav {
-            position: absolute;
-            top: 0px;
-            padding-inline-start: 0;
-            flex-direction: column;
-            margin-top: 0;
-            li {
-                position: relative;
-                width: 620px;
-                height: 100px;
-                border-radius: 20px;
-                box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
-                background: #F3FEFE;
-                padding-top: 23px;
-                padding-left: 190px;
-                margin-bottom: 31px;
-                cursor: pointer;
-                img {
-                    position: absolute;
-                    bottom: 0px;
-                    left: 11px;
-                    width: 165px;
-                    height: 115px;
-                }
-                &:hover {
-                    background: $colorBg_1;
-                }
-            }
-            &_name {
-                width: 391px;
-                font-weight: 500;
-                font-size: 24px;
-                line-height: 29px;
-            }
-            &_speciality {
-                font-weight: 700;
-                font-size: 22px;
-                line-height: 31px;
-                color: $colorText_2;
-                margin-top: 7px;
-                span {
-                    font-weight: 400;
-                    font-size: 18px;
-                    line-height: 25px;
-                    margin-left: 15px;
-                }
-            }
-        }
-        &__slide {
-            position: relative;
-            width: 630px;
-            height: 690px;
-            background: #FFFFFF;
-            border: 1px solid rgba(168, 234, 255, 1);
-            border-radius: 20px;
-            &_name {
-                font-weight: 500;
-                font-size: 28px;
-                line-height: 33px;
-                margin-top: 40px;
-                margin-left: 30px;
-            }
-            &_speciality {
-                width: 222px;
-                font-weight: 700;
-                color: $colorText_2;
-                font-size: 22px;
-                line-height: 31px;
-                margin-top: 11px;
-                margin-left: 30px;
-                span {
-                    font-weight: 500;
-                }
-            }
-            &_descr {
-                position: absolute;
-                top: 351px;
-                left: 16px;
-                background: rgba(243, 254, 254, 0.8);
-                backdrop-filter: blur(6px);
-                border-radius: 20px;
-                box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
-                width: 320px;
-                height: 326px;
-                padding: 16px 10px 12px 14px;
-    
-                font-weight: 400;
-                font-size: 18px;
-                line-height: 25px;
 
-                z-index: 10;
-                h3 {
-                    font-weight: 400;
-                    font-size: 20px;
-                    line-height: 28px;
-                    color: $colorText_2;
-                    margin-bottom: 15px;
-                }
-                span {
-                    font-weight: 600;
-                }
-            }
-            img {
-                position: absolute;
-                top: 70px;
-                right: 0px;
-                z-index: 1;
-                width: 474px;
-                height: 620px;
-            }
+    &__slider {
+        position: relative;  
+        margin-top: 30px;
+    }
+    &__control-prevBtn {
+        top: 233px;
+        right: 610px;
+    }
+    &__control-nextBtn {
+        top: 233px;
+        right: -20px;
+    }
+
+    &__slider-nav {
+        position: absolute;
+        top: 0px;
+        padding-inline-start: 0;
+        margin-top: 0;
+        list-style: none;
+    }
+    &__nav-item {
+        position: relative;
+        width: 630px;
+        height: 100px;
+        border-radius: 20px;
+        box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
+        background: #F3FEFE;
+        padding-top: 23px;
+        padding-left: 190px;
+        margin-bottom: 31px;
+        cursor: pointer;
+        &:last-child {
+            margin-bottom: 0px;
         }
-        .tns-nav-active {
-            box-sizing: border-box;
+        &:hover {
             background: $colorBg_1;
-            margin-right: 0;
-        }
-        .tns-item {
-            height: 760px;
-        }
-        .tns-ovh {
-            width: 630px;
-            margin-left: 650px;
         }
     }
-    .signUpBtn {
+    &__nav-img {
+        position: absolute;
+        bottom: 0px;
+        left: 11px;
+        width: 165px;
+        height: 115px;
+    }
+    &__nav-name {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 29px;
+    }
+    &__nav-speciality {
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 31px;
+        color: $colorText_2;
+        margin-top: 7px;
+        span {
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 25px;
+            margin-left: 15px;
+        }
+    }
+    &__slider-btn {
         position: absolute;
         width: 190px;
+        height: 40px;
         top: 720px;
         right: 209px;
         font-weight: 600;
         font-size: 20px;
         line-height: 25px;
+    }
+
+    .tns-nav-active {
+        box-sizing: border-box;
+        background: $colorBg_1;
+        margin-right: 0;
+    }
+    .tns-ovh {
+        width: 630px;
+        margin-left: 660px;
     }
 }
