--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -1,12 +1,5 @@
 .signUpForm {
-    &__title {
-        font-size: 24px;    
-        font-weight: 500;
-        color: $colorText_2;
-        line-height: 29px;
-        text-align: center;
-    }
-    input {
+    &__name {
         width: 300px;
         height: 40px;
         border-radius: 30px;
@@ -17,8 +10,18 @@
         &::placeholder {
             color: $colorBg_1;
         }
-        &:nth-child(3) {
-            margin-top: 20px;
+    }
+    &__phone {
+        width: 300px;
+        height: 40px;
+        border-radius: 30px;
+        border: 2px solid $colorBg_1;
+        background: #fff;
+        box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.05);
+        text-align: center;
+        margin-top: 20px;
+        &::placeholder {
+            color: $colorBg_1;
         }
     }
     &__btn {
