--- a/src/sass/blocks/_modals.scss
+++ b/src/sass/blocks/_modals.scss
@@ -17,6 +17,10 @@
         padding: 30px 65px 36px 65px;
         text-align: center;
     }
+    &__title {
+        font-size: 22px;
+        line-height: 26px;
+    }
     &__close {
         position: absolute;
         top: 10px;
@@ -25,18 +29,6 @@
         height: 42px;
         background: url("../icons/close_icon.svg") no-repeat center;
         cursor: pointer;
-    }
-    .signUpForm {
-        &__title {
-            font-size: 22px;
-            color: #000;
-            line-height: 24px;
-        }
-        input {
-            &:nth-child(2) {
-                margin-top: 18px;
-            }
-        }
     }
 }
 
@@ -78,8 +70,8 @@
         margin-top: 21px;
         width: 334px;
     }
-    .messengers {
-        margin-top: 30px;
+    &__messengers {
+        margin: 30px auto 0 auto;
     }
 }
 
@@ -90,11 +82,12 @@
     width: 100%;
     height: 100%;
     overflow: scroll;
+    background: $colorBg_2;
     &__content {
-        position: absolute;
-        width: 100%;
-        padding: 90px 315px 100px 315px;
-        background: $colorBg_2;
+        width: 1290px;
+        margin: 0 auto;
+        padding-top: 90px;
+        padding-bottom: 100px;
     }
     &__close {
         position: fixed;
@@ -104,7 +97,9 @@
         height: 42px;
         background: url("../icons/close_icon.svg") no-repeat center;
         cursor: pointer;
+        z-index: 20;
     }
+    
     &__title {
         font-size: 36px;
         font-weight: 500;
@@ -129,109 +124,55 @@
         
     }
     &__item {
-        position: relative;
+        cursor: pointer;
+    }
+    &__signUp {
         width: 630px;
-        height: 690px;
+        min-height: 690px;
+        padding-top: 30px; 
+    }
+    &__signUp-title {
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 39px;
+        span {
+            color: $colorText_2;
+        }
+    }
+    &__signUp-messengers {
+        margin-top: 82px;
+    }
+    &__signUp-wrapper {
+        margin-top: 30px;
+        padding: 35px 110px 25px 110px;
         border-radius: 20px;
         background: #FFF;
         box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.05);
-        padding-top: 40px;
-        padding-left: 16px;
-        cursor: pointer;
-        &_name {
-            font-size: 28px;
-            font-weight: 500;
-            margin-left: 14px;
-            line-height: 33px;
-        }
-        &_speciality {
-            color: $colorText_2;
-            font-size: 22px;
-            font-weight: 700;
-            line-height: 31px;
-            margin-left: 14px;
-            margin-top: 11px;
-        }
-        &_descr {
-            position: absolute;
-            top: 351px;
-            width: 320px;
-            height: 326px;
-            border-radius: 20px;
-            background: rgba(243, 254, 254, 0.80);
-            backdrop-filter: blur(6px);
-            padding: 16px 10px 12px 14px;
-            z-index: 10;
-        }
-        &_experience {
-            color: $colorText_2;
-            font-size: 20px;
-            font-weight: 400;
-            line-height: 36px;
-        }
-        &_certificates, &_orientation {
-            margin-top: 10px;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 25px;
-            span {
-                font-weight: 600;
-                font-size: 20px;
-            }
-        }
-        img {
-            position: absolute;
-            bottom: 0px;
-            right: 0px;
-            width: 474px;
-            height: 620px;
-            z-index: 1;
-        }
+        text-align: center;
     }
-
-    &__signUp {
-        width: 630px;
-        height: 690px;
-        padding-top: 40px;
-        &_title {
-            font-size: 28px;
-            font-weight: 400;
-            line-height: 39px;
-            span {
-                color: $colorText_2;
-            }
-        }
-        .messengers {
-            margin-top: 85px;
-        }
-        .signUpForm {
-            margin-top: 47px;
-            border-radius: 20px;
-            background: #FFF;
-            box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.05);
-            padding: 35px 110px 25px 110px;
-            text-align: center;
-            input {
-                &:nth-child(2) {
-                    margin-top: 25px;
-                }
-            }
-        }
+    &__signUp-subtitle {
+        font-size: 24px;    
+        font-weight: 500;
+        color: $colorText_2;
+        line-height: 29px;
+        text-align: center;
     }
-
+    &__signUp-form {
+        margin-top: 25px;
+    }
     &__btns {
         display: flex;
         justify-content: space-between;
-        margin-top: 60px;
-        &_main, &_other {
-            font-size: 28px;
-            font-weight: 400;
-            line-height: 39px;
-            text-decoration: none;
+        margin-top: 60px;   
+    }
+    &__btn {
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 39px;
+        text-decoration: none;
+        color: #474551;
+        &:hover {
             color: #474551;
-            &:hover {
-                color: #474551;
-            }
         }
     }
 }
@@ -248,7 +189,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         width: 480px;
-        height: 115px;
+        min-height: 115px;
         border-radius: 20px;
         background: $colorBg_2;
         box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.05);
