--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -22,6 +22,7 @@
     }
     &__btn{
         width: 190px;
+        height: 40px;
         font-weight: 600;
         font-size: 18px;
         line-height: 22px;
