--- a/src/sass/blocks/_reviews.scss
+++ b/src/sass/blocks/_reviews.scss
@@ -1,65 +1,88 @@
 .reviews {
-    padding-top: 100px;
-    min-height: 650px;
+    padding-top: 90px;
+    min-height: 635px;
     &__subtitle {
         text-align: center;
         margin: 30px auto 0 auto;
         width: 1066px;
     }
-    .slider {
-        &__slide {
-            display: grid;
-            grid-template-columns: 160px 378px;
-            column-gap: 31px;
-            justify-content: center;
-            width: 630px;
-            height: 300px;
-            background: $colorBg_2;
-            box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
-            border-radius: 20px;
+    &__slider {
+        position: relative;
+        margin-top: 30px;
+    }
+    &__slide {
+        display: grid;
+        grid-template-columns: 160px 379px;
+        column-gap: 31px;
+        padding-left: 30px;
+        padding-right: 30px;
+        width: 630px;
+        min-height: 300px;
+        background: $colorBg_2;
+        box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
+        border-radius: 20px;
+    }
+    &__photo {
+        display: block;
+        margin: auto 0;
+        width: 160px;
+        height: 160px;
+        border-radius: 100%;
+    }
+    &__descr {
+        position: relative; 
+        padding-top: 41px;
+        padding-bottom: 35px;
+    }
+    &__descr-title {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 29px;
+    }
+    &__descr-text {
+        margin-top: 20px;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 25px;
+    }
+    &__descr-date {
+        position: absolute;
+        bottom: 20px;
+        right: 0px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 22px;
+    }
+    &__control-prevBtn {
+        top: 125px;
+        left: -20px;
+    }
+    &__control-nextBtn {
+        top: 125px;
+        right: -20px;
+    }
+    &__slider-nav {
+        margin-top: 10px;
+    }
+    &__nav-dot {
+        width: 18px;
+        height: 18px;
+        background: $colorBg_1;
+        border-radius: 100%;
+        margin-right: 20px;
+        cursor: pointer;
+        &:last-child {
+            margin-right: 0px;
         }
-        &__photo {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            img {
-                width: 160px;
-                height: 160px;
-                border-radius: 100%;
-            }
-        }
-        &__descr {
-            position: relative;
-            &_title {
-                font-weight: 500;
-                font-size: 24px;
-                line-height: 29px;
-                margin-top: 41px;
-            }
-            &_text {
-                margin-top: 20px;
-                font-weight: 400;
-                font-size: 18px;
-                line-height: 25px;
-            }
-            &_date {
-                position: absolute;
-                bottom: 20px;
-                right: 0px;
-                font-weight: 400;
-                font-size: 16px;
-                line-height: 22px;
-            }
-        }
-        &__controls {
-            &_prevBtn {
-                top: 125px;
-                left: -20px;
-            }
-            &_nextBtn {
-                top: 125px;
-                right: -20px;
-            }
-        }
+    }
+    .tns-ovh {
+        min-height: 320px;
+    }
+    .tns-nav-active {
+        background: $colorText_3;
+        width: 24px;
+        height: 24px;
+        margin-right: 20px;
+        border-radius: 100%;
     }
 }
