--- a/src/sass/blocks/_slider.scss
+++ b/src/sass/blocks/_slider.scss
@@ -1,57 +1,23 @@
-.slider {
-    position: relative;
-    &__controls-prevBtn {
-        position: absolute;
-        cursor: pointer;
-        width: 40px;
-        height: 40px;
-        filter: drop-shadow(0px 15px 20px rgba(0, 0, 0, 0.05));
-        &:hover {
-            svg {
-                circle {
-                    fill: $colorBg_1;
-                }
+.controlSliders {
+    position: absolute;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    filter: drop-shadow(0px 15px 20px rgba(0, 0, 0, 0.05));
+    &:hover {
+        svg {
+            circle {
+                fill: $colorBg_1;
             }
         }
     }
-    &__controls-nextBtn {
-        position: absolute;
-        cursor: pointer;
-        width: 40px;
-        height: 40px;
-        filter: drop-shadow(0px 15px 20px rgba(0, 0, 0, 0.05));
-        &:hover {
-            svg {
-                circle {
-                    fill: $colorBg_1;
-                }
-            }
-        }
-    }
-    &__nav {
-        list-style: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 33px;
-        padding-inline-start: 0px;
-    }
-    &__nav-dot {
-        width: 18px;
-        height: 18px;
-        background: #BDF8F9;
-        border-radius: 100%;
-        margin-right: 20px;
-        cursor: pointer;
-        &:last-child {
-            margin-right: 0px;
-        }
-    }
-    .tns-nav-active {
-        background: $colorText_3;
-        width: 24px;
-        height: 24px;
-        margin-right: 20px;
-        border-radius: 100%;
-    }
+}
+
+.navSliders {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-inline-start: 0px;
+    margin-block-end: 0px;
 }
