--- a/src/sass/media/_1024px.scss
+++ b/src/sass/media/_1024px.scss
@@ -25,6 +25,35 @@
         font-size: 28px;
         line-height: 39px;
     }
+    .doctorCard {
+        width: 422px;
+        height: 726px;
+        padding-top: 20px;
+        padding-left: 20px;
+        &__name {
+            font-size: 23px;
+            line-height: 29px;
+        }
+        &__speciality {
+            font-size: 20px;
+            line-height: 28px;
+            margin-top: 15px;
+        }
+        &__img {
+            width: 250px;
+            height: 320px;
+            top: 142px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        &__descr {
+            width: 420px;
+            left: 0px;
+            bottom: 0px;
+            border: none;
+            padding: 21px 28px 7px 28px;
+        }
+    }
     .header {
         &__desktop {
             grid-template-columns: 238px 190px 160px 260px;
@@ -114,17 +143,324 @@
         &__subtitle {
             width: 983px;
         }
-        .slider {
+        &__slider {
             margin-top: 60px;
-            &__slide-img {
-                width: 300px;
-                height: 300px;
+        }
+        &__slide-img {
+            width: 300px;
+            height: 300px;
+        }
+        &__control-prevBtn {
+            top: 130px;
+        }
+        &__control-nextBtn {
+            top: 130px;
+        }
+    }
+    .service {
+        &__subtitle {
+            width: 984px;
+        }
+        &__wrapper {
+            margin-top: 30px;
+            grid-template-columns: 984px;
+            grid-template-rows: minmax(500px, auto);
+            grid-auto-rows: minmax(500px, auto);
+        }
+        &__item {
+            padding: 30px 50px 20px 30px;
+        }
+        &__item-img {
+            top: 46px;
+            right: 50px;
+        }
+        &__item-descr {
+            margin-top: 20px;
+            width: 526px;
+            min-height: 126px;
+        }
+        &__item-list {
+            margin-top: 0px;
+            min-height: 202px;
+        }
+    }
+    .hygiene {
+        &__priceBtn {
+            height: 53px;
+        }
+        &__wrapper {
+            grid-template-columns: 984px;
+            grid-template-rows: minmax(122px, auto) minmax(400px, auto) minmax(655px, auto);
+            gap: 60px;
+        }
+        &__item {
+            &:nth-child(1) {
+                text-align: center;
+                padding-left: 0px;
             }
-            &__controls-prevBtn {
-                top: 130px;
+            &:nth-child(2) {
+                width: 750px;
+                padding-right: 0px;
+                margin: 0 auto;
             }
-            &__controls-nextBtn {
-                top: 130px;
+            &:nth-child(3) {
+                grid-column-start: 1;
+                grid-column-end: 1;
+                padding-left: 0px;
+                padding-right: 0px;
+            }
+        }
+        &__blocks {
+            margin-top: 30px;
+            min-height: 510px;
+        }
+        &__messengers {
+            margin-top: 20px;
+        }
+        &__btns {
+            margin-top: 15px;
+        }
+    }
+    .doctors {
+        min-height: 1117px;
+        &__subtitle {
+            width: 984px;
+        }
+        &__slider {
+            margin-top: 46px;
+        }
+        &__slider-nav {
+            padding-top: 36px;
+        }
+        &__nav-item {
+            width: 540px;
+        }
+        &__nav-name {
+            font-size: 20px;
+            line-height: 24px;
+        }
+        &__nav-speciality {
+            font-size: 16px;
+            line-height: 22px;
+            margin-top: 12px;
+            span {
+                font-size: 14px;
+            }
+        }
+        &__slider-btn {
+            top: 746px;
+            right: 121px;
+        }
+        &__control-prevBtn {
+            top: 217px;
+            right: 397px;
+        }
+        &__control-nextBtn {
+            top: 217px;
+            right: -15px;
+        }
+        .tns-ovh {
+            width: 422px;
+            margin-left: 562px;
+        }
+    }
+    .helper {
+        &__subtitle {
+            font-size: 28px;
+            line-height: 35px;
+        }
+        &__wrapper {
+            width: 630px;
+            column-gap: 30px;
+        }
+    }
+    .modalHelper {
+        &__content {
+            width: 1024px;
+            padding: 30px 20px 25px 20px;
+        }
+        &__title {
+            font-size: 28px;
+            line-height: 35px;
+            width: 100%;
+        }
+        &__subtitle {
+            margin-top: 30px;
+        }
+        &__wrapper {
+            margin-top: 30px;
+            grid-template-columns: repeat(2, 422px);
+            justify-content: center;
+        }
+        &__signUp {
+            width: 422px;
+            padding-top: 0px;
+        }
+        &__signUp-title {
+            font-size: 22px;
+            line-height: 31px;
+        }
+        &__signUp-wrapper {
+            padding: 35px 40px 25px 40px;
+        }
+    }
+
+    .reviews {
+        min-height: 760px;
+        &__subtitle {
+            width: 984px;
+        }
+        &__slider {
+            margin-top: 60px;
+        }
+        &__slide {
+            min-height: 402px;
+            width: 482px;
+            padding-right: 23px;
+            grid-template-columns: 160px 238px;
+        }
+        &__photo {
+            margin-top: 41px;
+        }
+        &__descr-date {
+            right: 353px;
+        }
+        &__control-prevBtn {
+            top: 181px;
+        }
+        &__control-nextBtn {
+            top: 181px;
+        }
+        .tns-ovh {
+            min-height: 422px;
+        }
+    }
+
+    .licenses {
+        min-height: 635px;
+        &__subtitle {
+            width: 984px;
+        }
+        &__slide-img {
+            width: 231px;
+            height: 308px;
+        }
+        &__control-prevBtn {
+            top: 134px;
+        }
+        &__control-nextBtn {
+            top: 134px;
+        } 
+    }
+
+    .primaryConsult {
+        padding-top: 11px;
+        padding-bottom: 11px;
+        &__wrapper {
+            width: 482px;
+            padding: 30px 3px 25px 3px;
+        }
+    }
+
+    .contacts {
+        &__wrapper {
+            top: 96px;
+            left: 20px;
+            transform: none;
+        }
+    }
+
+    .aboutClinic {
+        min-height: 923px;
+        &__subtitle {
+            width: 984px;
+        }
+        &__wrapper {
+            margin-top: 60px;
+            grid-template-columns: repeat(2, 482px);
+            column-gap: 20px;
+        }
+        &__img {
+            width: 482px;
+            height: 300px;
+            margin-top: 35px;
+        }
+        &__list {
+            margin-top: 30px;
+            padding-inline-start: 0px;
+        }
+        &__list-item {
+            font-size: 16px;
+            line-height: 17px;
+            margin-bottom: 20px;
+            &:nth-child(3) {
+                margin-bottom: 0px;
+            }
+            &::before {
+                display: none;
+            }
+        }
+        &__slider {
+            margin-top: 50px;
+        }
+        &__slide-img {
+            width: 231px;
+            height: 154px;
+        }
+        &__control-prevBtn {
+            top: 57px;
+        }
+        &__control-nextBtn {
+            top: 57px;
+        }
+    }
+
+    .footer {  
+        &__wrapper {
+            position: relative;
+        }
+        &__menu {
+            position: absolute;
+            left: -200%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            background: $colorBg_2;
+            z-index: 10;
+            padding: 0 20px;
+            &_active {
+                left: 0;
+            }
+        }
+        &__menu-close {
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            display: block;
+        }
+        &__hamburger {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            right: 0px;
+            width: 60px;
+            height: 60px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 15px 10px;
+            background-color: $colorBg_2;
+            box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
+            border-radius: 20px;
+        }
+        &__hamburger-line {
+            display: block;
+            height: 6px;
+            width: 40px;
+            background: $colorText_2;
+            border-radius: 20px;
+            &_short {
+                width: 33px;
             }
         }
     }
