--- a/src/sass/media/_768px.scss
+++ b/src/sass/media/_768px.scss
@@ -6,6 +6,23 @@
         font-size: 32px;
         line-height: 38px;
     }
+    .doctorCard {
+        width: 354px;
+        padding-left: 17px;
+        &__name {
+            font-size: 18px;
+            line-height: 21px;
+        }
+        &__speciality {
+            font-size: 16px;
+            line-height: 22px;
+            margin-top: 23px;
+        }
+        &__descr {
+            width: 352px;
+            padding: 21px 23px 7px 23px;
+        }
+    }
     .header {
         .container {
             position: relative;
@@ -146,17 +163,272 @@
             width: 728px;
             margin: 60px auto 0 auto;
         }
-        .slider {
-            &__slide-img {
-                width: 354px;
-                height: 354px;
+        &__slide-img {
+            width: 354px;
+            height: 354px;
+        }
+        &__control-prevBtn {
+            top: 157px;
+        }
+        &__control-nextBtn {
+            top: 157px;
+        }
+    }
+    .service {
+        &__subtitle {
+            width: 728px;
+        }
+        &__wrapper {
+            grid-template-columns: 728px;
+            grid-template-rows: minmax(560px, auto);
+            grid-auto-rows: minmax(560px, auto);
+        }
+        &__item {
+            padding: 60px 35px 30px 60px;
+        }
+        &__item-img {
+            top: 100px;
+            right: 30px;
+        }
+        &__item-descr {
+            margin-top: 30px;
+            width: 376px;
+        }
+        &__item-list {
+            margin-top: 8px;
+            min-height: 204px;
+        }
+    }
+    .hygiene {
+        &__wrapper {
+            grid-template-columns: 728px;
+            grid-template-rows: minmax(161px, auto) minmax(372px, auto) minmax(660px, auto);
+        }
+        &__title {
+            width: 685px;
+            margin: 0 auto;
+        }
+        &__list {
+            font-size: 20px;
+            line-height: 28px;
+        }
+        &__item {
+            &:nth-child(2) {
+                width: 728px;
             }
-            &__controls-prevBtn {
-                top: 157px;
+        }
+        &__blocks {
+            margin-top: 60px;
+        }
+        &__block {
+            font-size: 18px;
+            line-height: 25px;
+            padding: 18px 21px 0px 150px;
+            width: 671px;
+        }
+        &__messengers {
+            display: none;
+        }
+        &__btns {
+            margin-top: 30px;
+        }
+    }
+    .doctors {
+        &__subtitle {
+            width: 728px;
+        }
+        &__slider {
+            margin-top: 39px;
+        }
+        &__slider-nav {
+            padding-top: 11px;
+        }
+        &__nav-img {
+            display: none;
+        }
+        &__nav-item {
+            width: 354px;
+            padding-left: 27px;
+        }
+        &__nav-name {
+            font-size: 18px;
+            line-height: 22px;
+        }
+        &__slider-btn {
+            right: 83px;
+            top: 756px;
+        }
+        &__control-prevBtn {
+            right: 329px;
+        }
+        .tns-ovh {
+            width: 354px;
+            margin-left: 374px;
+        }
+    }
+    .helper {
+        padding-top: 60px;
+        &__subtitle {
+            line-height: 39px;
+        }
+    }
+    .modalHelper {
+        &__content {
+            width: 768px;
+            padding: 30px 19px 39px 20px;
+        }
+        &__wrapper {
+            grid-template-columns: repeat(2, 354px);
+            column-gap: 20px;
+            margin-top: 60px;
+            
+        }
+        &__btn {
+            font-size: 22px;
+            line-height: 31px;
+        }
+        &__signUp {
+            width: 354px;
+            min-height: 610px;
+            padding-top: 0px;
+        }
+        &__signUp-messengers {
+            margin-top: 77px;
+        }
+        &__signUp-subtitle {
+            font-size: 20px;
+            line-height: 24px;
+        }
+        &__signUp-wrapper {
+            margin-top: 30px;
+            padding: 30px 19px 30px 19px; 
+        }
+    }
+
+    .reviews {
+        min-height: 700px;
+        &__subtitle {
+            width: 732px;
+        }
+        &__slider {
+            padding-left: 49px;
+            padding-right: 49px;
+        }
+        &__slide {
+            width: 630px;
+            min-height: 300px;
+            padding-right: 30px;
+            grid-template-columns: 160px 379px;
+        }
+        &__photo {
+            margin: auto 0;
+        }
+        &__descr-date {
+            right: 0px;
+            bottom: 20px;
+        }
+        &__control-prevBtn {
+            top: 133px;
+            left: 0px;
+        }
+        &__control-nextBtn {
+            top: 133px;
+            right: 0px;
+        }
+        .tns-ovh {
+            min-height: 320px;
+        }
+    }
+
+    .licenses {
+        min-height: 860px;
+        &__subtitle {
+            width: 732px;
+        }
+        &__slider {
+            margin-top: 60px;
+        }
+        &__slide-img {
+            width: 349px;
+            height: 464px;
+        }
+        &__control-prevBtn {
+            top: 216px;
+        }
+        &__control-nextBtn {
+            top: 216px;
+        } 
+    }
+
+    .primaryConsult {
+        background: url("../img/recordFree_bg.jpg") no-repeat 38% 0%;
+        background-size: 1920px 520px;
+        padding-top: 36px;
+        padding-bottom: 36px;
+        margin-top: 30px;
+        &__wrapper {
+            margin: 0 auto;
+        }
+    }
+
+    .contacts {
+        min-height: 1015px;
+        &__wrapper {
+            position: static;
+            margin: 30px auto 30px auto;
+        }
+        iframe {
+            height: 560px;
+        }
+    }
+
+    .aboutClinic {
+        min-height: 950px;
+        &__subtitle {
+            width: 728px;
+        }
+        &__wrapper {
+            margin-top: 55px;
+            grid-template-columns: repeat(2, 354px);
+        }
+        &__img {
+            margin-top: 0px;
+            width: 354px;
+            height: 300px;
+        }
+        &__descr {
+            font-size: 20px;
+            line-height: 28px;
+        }
+        &__list-item {
+            margin-bottom: 0px;
+            &:nth-child(1) {
+                display: none;
             }
-            &__controls-nextBtn {
-                top: 157px;
+            &:nth-child(3) {
+                display: none;
             }
+        }
+        &__slider {
+            margin-top: 60px;
+        }
+        &__slide-img {
+            width: 354px;
+            height: 237px;
+        }
+        &__control-prevBtn {
+            top: 97px;
+        }
+        &__control-nextBtn {
+            top: 97px;
+        }
+    }
+    .footer {
+        &__menu {
+            width: 640px;
+        }
+        &__list-item {
+            font-size: 17px;
         }
     }
 }
