--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -35,6 +35,7 @@ h1, h2 {
 @import "blocks/messengers";
 @import "blocks/logo";
 @import "blocks/slider";
+@import "blocks/doctorCard";
 
 @import "blocks/header";
 @import "blocks/promo";
